deviseの設定、viewファイルのname添削

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Furima28324</title>
+  <title>Furima</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <script type="text/javascript" src="https://js.pay.jp/v1/"></script>
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <div class="header__bar row">
-      <h1 class="grid-6"><a href="/">Furima28324</a></h1>
+      <h1 class="grid-6"><a href="/">Furima</a></h1>
       <% if user_signed_in? %>
         <div class="user_nav grid-6">
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
