--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <% if user_signed_in? %>
         <div class="user_nav grid-6">
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-          <%= link_to "新規投稿商品", new_item_path, class: "post" %>
+          <%# <%= link_to "新規投稿商品", new_items_path, class: "post" %> %>
         </div>
       <% else %>
         <div class="grid-6">
