--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,23 @@
 </head>
 
 <body>
+  <header class="header">
+    <div class="header__bar row">
+      <h1 class="grid-6"><a href="/">Furima</a></h1>
+      <% if user_signed_in? %>
+        <div class="user_nav grid-6">
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          <%# <%= link_to "新規投稿商品", new_items_path, class: "post"%>
+        </div>
+      <% else %>
+        <div class="grid-6">
+          <%= link_to "ログイン", new_user_session_path, class: "post" %>
+          <%= link_to "新規登録", new_user_registration_path, class: "post" %>
+        </div>
+      <% end %>
+    </div>
+  </header>
+
   <%= yield %>
 </body>
 
