--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -124,7 +124,7 @@
   <div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
       <% if user_signed_in? %>
-        <%= link_to '新規投稿商品', href="items/new", class: "subtitle" %>
+        <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
       <% else %>
         <%= link_to "新規投稿商品", new_user_registration_path, class: "subtitle" %>
       <% end %>
