--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,7 +132,7 @@
 
       <li class='list'>
         <% @items.each do |item| %>
-          <%= link_to "items/show" do %>
+          <%= link_to item_path(item.id)  do %>
           <div class='item-img-content'>
            <%= image_tag item.image, class: "item-img" if item.image.attached?%>
 
