--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -22,10 +22,11 @@
           (税込) 送料込み
         </span>
       </div>
-    <% if user_signed_in? %>
+    <% if user_signed_in? && current_user.id == @item.user_id %>
      <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %>
      <p class='or-text'>or</p>
      <%= link_to '削除', href="items/destroy", method: :delete, class:'item-destroy' %>
+    <% else %>
       <%= link_to '購入画面に進む',root_path,class:"item-red-btn"%>
     <% end %>
       <div class="item-explain-box">
