--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,7 +7,7 @@
         <%= @item.title %>
       </h2>
       <div class='item-img-content'>
-        <%= image_tag @item.image, class: "item-box-img" if @item.image.attached? %>
+        <%= image_tag @item.image, class: "item-box-img" %>
          <% if @item.user_id.present? %>
           <div class='sold-out'>
            <span>Sold Out!!</span>
@@ -22,12 +22,15 @@
           (税込) 送料込み
         </span>
       </div>
-    <% if user_signed_in? && current_user.id == @item.user_id %>
+    <% if @item.user == current_user %>
      <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %>
      <p class='or-text'>or</p>
      <%= link_to '削除', item_path, method: :delete, class:'item-destroy' %>
+    <% end %>
+    <%  if user_signed_in? && @item.user != current_user %>
+      <%= link_to '購入画面に進む',item_orders_path(@item), class:"item-red-btn"%>
     <% else %>
-      <%= link_to '購入画面に進む',root_path,class:"item-red-btn"%>
+      <%= link_to '購入画面に進む',new_user_session_path, class:"item-red-btn"%>
     <% end %>
       <div class="item-explain-box">
        <span><%= "商品説明" %></span>
