画像のプレビュー機能の実装

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -22,6 +22,7 @@
           <% if @item.image.attached? %> 
           <%= image_tag @item.image.variant(resize:'500x500') %>  
           <% end %> 
+          <div id="image-list"></div>
       </div>
     </div>
     <%# /出品画像 %>
